--- a/app/src/main/res/drawable/contactus1.xml
+++ b/app/src/main/res/drawable/contactus1.xml
@@ -2,10 +2,9 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#44265E"/>
+            <solid android:color="#FFDDCB"/>
             <corners android:radius="25dp"/>
         </shape>
-
     </item>
 
     <!--  left shadow -->
