--- a/app/src/main/res/drawable/contactus2.xml
+++ b/app/src/main/res/drawable/contactus2.xml
@@ -2,7 +2,7 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#FFDDCB"/>
+            <solid android:color="#F2F2F2"/>
             <corners android:radius="25dp"/>
         </shape>
 
