--- a/app/src/main/res/drawable/tab_indicator.xml
+++ b/app/src/main/res/drawable/tab_indicator.xml
@@ -1,4 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <item android:state_selected="true">
+        <layer-list>
+<!--            <item android:top="20dp">-->
+<!--                <shape>-->
+<!--                    <solid android:color="#FFFFFF"/> &lt;!&ndash; Ubah warna sesuai kebutuhan &ndash;&gt;-->
+<!--                </shape>-->
+<!--            </item>-->
+            <item android:top="45dp" android:left="16dp" android:right="16dp">
+                <shape
+                    android:shape="rectangle">
+                    <stroke android:width="1dp" android:color="#FFFFFF" />
+                    <solid android:color="#FFFFFF" />
+                </shape>
+            </item>
+        </layer-list>
+    </item>
 </selector>
