--- a/app/src/main/res/drawable/verticaldotted.xml
+++ b/app/src/main/res/drawable/verticaldotted.xml
@@ -1,23 +1,23 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:bottom="-4dp"
-        android:left="-4dp"
+        android:left="0dp"
         android:right="-4dp"
-        android:top="0dp">
+        android:top="-4dp">
 
         <shape android:shape="rectangle">
             <stroke
                 android:width="3dp"
-                android:color="#ffffff"
-                android:dashGap="12dp"
-                android:dashWidth="24dp" />
+                android:color="@color/primary"
+                android:dashGap="6dp"
+                android:dashWidth="8dp" />
 
             <solid android:color="@android:color/transparent" />
 
             <padding
                 android:bottom="10dp"
-                android:left="10dp"
-                android:right="10dp"
+                android:left="1dp"
+                android:right="2dp"
                 android:top="10dp" />
         </shape>
     </item>
