--- a/app/src/main/res/layout/activity_ticketform.xml
+++ b/app/src/main/res/layout/activity_ticketform.xml
@@ -1,9 +1,422 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView android:layout_height="wrap_content" android:layout_width="match_parent"
+
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/tirai"
+    android:orientation="vertical"
     tools:context=".ticketform">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <LinearLayout
+        android:id="@+id/backBtn"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:background="@drawable/circleshape"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="15dp"
+        >
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:src="@drawable/baseline_arrow_back_ios_new_24"/>
+        </LinearLayout>
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/customticketform2"
+        android:layout_marginHorizontal="25dp"
+        android:layout_below="@id/backBtn"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="25dp"
+        android:layout_marginTop="10dp"
+        >
+
+        <TextView
+            android:id="@+id/eventNameLbl"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="25dp"
+            android:layout_marginTop="14dp"
+            android:fontFamily="@font/poppins_bold"
+            android:text="Event Name"
+            android:textColor="#44265E"
+            android:textSize="24dp"></TextView>
+
+        <RelativeLayout
+            android:id="@+id/infoWrapper"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/eventNameLbl"
+            android:layout_marginHorizontal="25dp"
+            android:layout_marginTop="10dp"
+            >
+
+            <ImageView
+                android:id="@+id/calendaricon"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentLeft="true"
+                android:layout_centerInParent="true"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/calendaricon" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_toRightOf="@id/calendaricon"
+                android:layout_centerInParent="true"
+                >
+                <TextView
+                    android:id="@+id/eventDateLbl"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="eventdate"
+                    android:textColor="#44265E"
+                    android:textSize="16dp"
+                    android:fontFamily="@font/poppins_semibold"
+                    ></TextView>
+                <TextView
+                    android:id="@+id/eventTimeLbl"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="eventtime"
+                    android:textColor="#44265E"
+                    android:textSize="16dp"
+                    android:fontFamily="@font/poppins_semibold"
+                    ></TextView>
+            </LinearLayout>
+            <TextView
+                android:id="@+id/eventPriceLbl"
+                android:layout_width="90dp"
+                android:layout_height="80dp"
+                android:layout_alignParentRight="true"
+                android:text="$00.00"
+                android:background="@drawable/pricetagicon"
+                android:gravity="center"
+                android:textColor="#FFFFFF"
+                android:textSize="18dp"
+                android:fontFamily="@font/poppins_bold"
+                />
+        </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/line1"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:layout_below="@+id/infoWrapper"
+            android:background="@drawable/customticketform2"
+            android:layout_marginHorizontal="25dp"
+            android:layout_marginBottom="25dp"
+            android:layout_marginTop="15dp"
+            android:orientation="horizontal"
+            ></LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/formgroup1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_below="@id/line1"
+            android:layout_marginHorizontal="25dp"
+            >
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="40dp"
+                android:src="@drawable/personicon"
+                android:layout_marginRight="10dp"
+                android:layout_gravity="center"
+                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Customer Name :"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:textSize="18dp"
+                    android:textColor="#44265E"
+                    ></TextView>
+                <EditText
+                    android:id="@+id/customerTxt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ticketform_inputborder"
+                    android:hint="@string/customerhint"
+                    android:paddingVertical="6dp"
+                    android:paddingLeft="6dp"
+                    />
+            </LinearLayout>
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/formgroup2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/formgroup1"
+            android:layout_marginHorizontal="25dp"
+            android:layout_marginTop="20dp"
+            >
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="40dp"
+                android:src="@drawable/qtyicon"
+                android:layout_marginRight="10dp"
+                android:layout_gravity="center"
+                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Quantity :"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:textSize="18dp"
+                    android:textColor="#44265E"
+                    ></TextView>
+                <EditText
+                    android:id="@+id/qtyTxt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ticketform_inputborder"
+                    android:hint="@string/qtyhint"
+                    android:paddingVertical="6dp"
+                    android:paddingLeft="6dp"
+                    android:inputType="number"
+                    />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/formgroup3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/formgroup2"
+            android:layout_marginHorizontal="25dp"
+            android:layout_marginTop="20dp"
+            >
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ticketicon"
+                android:layout_marginRight="10dp"
+                android:layout_gravity="center"
+                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Booth Type :"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:textSize="18dp"
+                    android:textColor="#44265E"
+                    ></TextView>
+                <RadioGroup
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    >
+                    <RadioButton
+                        android:id="@+id/radioButton1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="VIP"
+                        android:textColor="#44265E"
+                        android:fontFamily="@font/poppins"></RadioButton>
+                    <RadioButton
+                        android:id="@+id/radioButton2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Regular"
+                        android:textColor="#44265E"
+
+                        android:fontFamily="@font/poppins"></RadioButton>
+                </RadioGroup>
+            </LinearLayout>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/errorMsg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Error"
+            android:textSize="14dp"
+            android:layout_below="@+id/formgroup3"
+            android:textColor="#D9001B"
+            android:gravity="center"
+            android:visibility="invisible"
+            />
+
+        <LinearLayout
+            android:id="@+id/line2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_below="@id/errorMsg"
+            >
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="40dp"
+                android:src="@drawable/rightcircle"></ImageView>
+            <LinearLayout
+                android:layout_width="320dp"
+                android:layout_height="4dp"
+                android:background="@drawable/dotted"
+                android:layout_gravity="center"
+                ></LinearLayout>
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="40dp"
+                android:src="@drawable/leftcircle"></ImageView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/buyBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/line2"
+            android:orientation="horizontal"
+            android:paddingBottom="20dp"
+            >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="BUY TICKET NOW"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:textSize="25dp"
+                android:fontFamily="@font/poppins_bold"
+                android:textColor="#44265E"
+                />
+        </LinearLayout>
+
+    </RelativeLayout>
+
+<!--    <RelativeLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_weight="1"-->
+<!--        -->
+<!--        >-->
+<!--        <LinearLayout-->
+<!--            android:id="@+id/menu"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_alignParentBottom="true"-->
+<!--            android:layout_alignParentStart="true"-->
+<!--            android:layout_toEndOf="@+id/menutoggle"-->
+<!--            android:layout_marginBottom="25dp"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:paddingVertical="20dp"-->
+<!--            android:paddingHorizontal="30dp"-->
+<!--            android:paddingStart="80dp"-->
+<!--            android:layout_marginHorizontal="20dp"-->
+<!--            android:background="@drawable/menuradius"-->
+<!--            android:visibility="visible"-->
+
+<!--            >-->
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="horizontal"-->
+<!--                android:layout_weight="1"-->
+<!--                android:gravity="center">-->
+<!--                <ImageView-->
+<!--                    android:layout_width="35dp"-->
+<!--                    android:layout_height="35dp"-->
+<!--                    android:src="@drawable/baseline_home_24"></ImageView>-->
+<!--            </LinearLayout>-->
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="horizontal"-->
+<!--                android:layout_weight="1"-->
+<!--                android:gravity="center">-->
+<!--                <ImageView-->
+<!--                    android:layout_width="35dp"-->
+<!--                    android:layout_height="35dp"-->
+<!--                    android:src="@drawable/baseline_home_24"></ImageView>-->
+<!--            </LinearLayout>-->
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="horizontal"-->
+<!--                android:layout_weight="1"-->
+<!--                android:gravity="center">-->
+<!--                <ImageView-->
+<!--                    android:layout_width="35dp"-->
+<!--                    android:layout_height="35dp"-->
+<!--                    android:src="@drawable/baseline_home_24"></ImageView>-->
+<!--            </LinearLayout>-->
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="horizontal"-->
+<!--                android:layout_weight="1"-->
+<!--                android:gravity="center">-->
+<!--                <ImageView-->
+<!--                    android:layout_width="35dp"-->
+<!--                    android:layout_height="35dp"-->
+<!--                    android:src="@drawable/baseline_home_24"></ImageView>-->
+<!--            </LinearLayout>-->
+
+<!--        </LinearLayout>-->
+
+<!--        <LinearLayout-->
+<!--            android:id="@+id/menutoggle"-->
+<!--            android:layout_width="75dp"-->
+<!--            android:layout_height="75dp"-->
+<!--            android:layout_weight="1"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:layout_alignParentBottom="true"-->
+<!--            android:layout_alignParentStart="true"-->
+<!--            android:layout_marginBottom="25dp"-->
+<!--            android:layout_marginStart="20dp"-->
+<!--            android:paddingVertical="20dp"-->
+<!--            android:background="@drawable/menutoggleradius"-->
+<!--            >-->
+<!--            <LinearLayout-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="horizontal"-->
+<!--                android:layout_weight="1"-->
+<!--                android:gravity="center">-->
+<!--                <ImageView-->
+<!--                    android:layout_width="35dp"-->
+<!--                    android:layout_height="35dp"-->
+<!--                    android:src="@drawable/baseline_menu_24"/>-->
+<!--            </LinearLayout>-->
+<!--        </LinearLayout>-->
+<!--    </RelativeLayout>-->
+</LinearLayout>
+
+</ScrollView>
