--- a/app/src/main/res/layout/activity_ticketlist.xml
+++ b/app/src/main/res/layout/activity_ticketlist.xml
@@ -1,9 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ticketlist">
+    tools:context=".ticketlist"
+    android:background="@drawable/tirai"
+    android:orientation="vertical"
+    >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingVertical="15dp"
+        >
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/logo"
+            ></ImageView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="35dp"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        >
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="What Event Next?"
+            android:textColorHint="@color/primary"
+            android:background="@drawable/search_text_field"
+            android:padding="18dp"
+            android:drawableRight="@drawable/baseline_search_24"
+            >
+
+        </EditText>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/customticketlist"
+        android:layout_marginTop="35dp"
+        android:orientation="vertical"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tickets"
+            android:textSize="35dp"
+            android:textColor="#FFFFFF"
+            android:layout_marginHorizontal="35dp"
+            android:layout_marginTop="15dp"
+            android:fontFamily="@font/poppins_bold"></TextView>
+
+        <ListView
+            android:id="@+id/listView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="vertical"
+            tools:listitem="@layout/items"
+            android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="35dp"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="10.0sp"/>
+    </LinearLayout>
+
+</LinearLayout>
