--- a/app/src/main/res/layout/fragment_about_us.xml
+++ b/app/src/main/res/layout/fragment_about_us.xml
@@ -1,14 +1,185 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView android:layout_height="900dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".AboutUsFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:layout_editor_absoluteX="1dp"
+    app:layout_editor_absoluteY="1dp"
+    android:fillViewport="true"
+    >
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        tools:context=".AboutUsFragment"
+        android:orientation="vertical"
+        >
+        <!-- TODO: Update blank fragment layout -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical"
+            >
+            <ImageView
+                android:layout_width="220dp"
+                android:layout_height="220dp"
+                android:src="@drawable/logo"
+                android:layout_gravity="center"
+                />
 
-</FrameLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textColor="#FFFFFF"
+                android:fontFamily="@font/poppins_semibold"
+                android:paddingHorizontal="45dp"
+                android:textSize="16dp"
+                android:text="Welcome to JalIhara, your go-to mobile app for purchasing your favorite art performance tickets. Discover, explore, and secure your spot at captivating shows with ease. Join us on this artistic journey and experience the magic of live entertainment like never before."
+                ></TextView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_marginHorizontal="90dp"
+                android:layout_marginVertical="40dp"
+                android:background="@drawable/customticketform"
+
+                ></LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="CHECK OUT OUR STORE"
+                android:textColor="#FFFFFF"
+                android:fontFamily="@font/poppins_bold"
+                android:textAlignment="center"
+                android:textSize="20dp"
+                android:layout_marginBottom="20dp"
+                />
+
+            <ViewFlipper
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:flipInterval="2000"
+                android:autoStart="true"
+                android:inAnimation="@anim/menuslideright"
+                android:outAnimation="@anim/menuslideleft"
+                android:layout_marginBottom="30dp"
+                >
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginHorizontal="35dp"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    >
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="180dp"
+                        android:src="@drawable/about_shop2"
+                        android:layout_gravity="center"
+                        android:background="@drawable/carouselborder"
+                        android:clipToOutline="true"
+                        ></ImageView>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="WHOLE BUILDING"
+                        android:fontFamily="@font/poppins_bold"
+                        android:textColor="#FFFFFF"
+                        android:textSize="22dp"
+                        android:textAlignment="center"
+                        ></TextView>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="What you will see when you arrive"
+                        android:fontFamily="@font/poppins_semibold"
+                        android:textColor="#FFFFFF"
+                        android:textSize="14dp"
+                        android:textAlignment="center"
+                        ></TextView>
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginHorizontal="35dp"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    >
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="180dp"
+                        android:src="@drawable/about_shop1"
+                        android:layout_gravity="center"
+                        android:background="@drawable/carouselborder"
+                        android:clipToOutline="true"
+                        ></ImageView>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="ENTRANCE SIDE VIEW 1"
+                        android:fontFamily="@font/poppins_bold"
+                        android:textColor="#FFFFFF"
+                        android:textSize="21dp"
+                        android:textAlignment="center"
+                        ></TextView>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Where you can enter our store"
+                        android:fontFamily="@font/poppins_semibold"
+                        android:textColor="#FFFFFF"
+                        android:textSize="14dp"
+                        android:textAlignment="center"
+                        ></TextView>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginHorizontal="35dp"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    >
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="180dp"
+                        android:src="@drawable/about_shop2"
+                        android:layout_gravity="center"
+                        android:background="@drawable/carouselborder"
+                        android:clipToOutline="true"
+                        ></ImageView>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="ENTRANCE SIDE VIEW 2"
+                        android:fontFamily="@font/poppins_bold"
+                        android:textColor="#FFFFFF"
+                        android:textSize="22dp"
+                        android:textAlignment="center"
+                        ></TextView>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Where you can enter our store"
+                        android:fontFamily="@font/poppins_semibold"
+                        android:textColor="#FFFFFF"
+                        android:textSize="14dp"
+                        android:textAlignment="center"
+                        ></TextView>
+
+                </LinearLayout>
+            </ViewFlipper>
+
+        </LinearLayout>
+    </LinearLayout>
+</ScrollView>
