--- a/app/src/main/res/layout/fragment_contact_us.xml
+++ b/app/src/main/res/layout/fragment_contact_us.xml
@@ -1,14 +1,184 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView android:layout_height="900dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ContactUsFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:layout_editor_absoluteX="1dp"
+    app:layout_editor_absoluteY="1dp"
+    >
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        tools:context=".AboutUsFragment"
+        android:orientation="vertical"
+        >
+        <!-- TODO: Update blank fragment layout -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="40dp"
+            android:layout_marginHorizontal="35dp"
+            android:background="@drawable/contactus1"
+            android:layout_gravity="center"
+            android:paddingVertical="20dp"
 
-</FrameLayout>
+            >
+            <ImageView
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:src="@drawable/location"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="40dp"
+                ></ImageView>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_gravity="center"
+                >
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Jl. Pakuan No.5"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:textSize="16dp"
+                    android:textColor="#000000"
+                    >
+
+                </TextView>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Our Store Address"
+                    android:textColor="#797979"
+                    android:fontFamily="@font/poppins"
+                    android:textSize="12dp"
+                    android:textStyle="bold"
+                    ></TextView>
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="40dp"
+            android:layout_marginHorizontal="35dp"
+            android:background="@drawable/contactus2"
+            android:layout_gravity="center"
+            android:paddingVertical="20dp"
+
+            >
+            <ImageView
+                android:id="@+id/image2"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:src="@drawable/website"
+                android:layout_marginRight="40dp"
+                android:layout_marginLeft="30dp"
+                android:layout_alignParentRight="true"
+
+                ></ImageView>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@id/image2"
+                >
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="www.jalihara.com"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:textSize="16dp"
+                    android:textColor="#000000"
+                    >
+
+                </TextView>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Our Store Website"
+                    android:textColor="#797979"
+                    android:fontFamily="@font/poppins"
+                    android:gravity="right"
+                    android:textSize="12dp"
+                    android:textStyle="bold"
+                    ></TextView>
+            </LinearLayout>
+
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="40dp"
+            android:layout_marginHorizontal="35dp"
+            android:background="@drawable/contactus1"
+            android:layout_gravity="center"
+            android:paddingVertical="20dp"
+
+            >
+            <ImageView
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:src="@drawable/contact_contact"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="40dp"
+                ></ImageView>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_gravity="center"
+                >
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="(+62)81-6969-6969"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:textSize="16dp"
+                    android:textColor="#000000"
+                    >
+                </TextView>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Our Store Contact Number"
+                    android:textColor="#797979"
+                    android:fontFamily="@font/poppins"
+                    android:textSize="12dp"
+                    android:textStyle="bold"
+                    ></TextView>
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="© Jalihara 2023. All Rights Reserved."
+                android:fontFamily="@font/poppins_semibold"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="16dp"
+                android:layout_marginTop="40dp"
+                />
+        </LinearLayout>
+    </LinearLayout>
+</ScrollView>
