--- a/app/src/main/res/layout/items.xml
+++ b/app/src/main/res/layout/items.xml
@@ -1,6 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingVertical="25dp"
+    app:cardCornerRadius="12dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
+    <RelativeLayout
+        android:id="@+id/items"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+        <RelativeLayout
+            android:id="@+id/itemImage"
+            android:layout_width="match_parent"
+            android:layout_height="170dp"
+            android:background="@drawable/ticket1"
+            >
+            <RelativeLayout
+                android:id="@+id/group1"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_alignParentLeft="true"
+                >
+
+                <TextView
+                    android:id="@+id/itemName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginVertical="30dp"
+                    android:fontFamily="@font/teko_light"
+                    android:gravity="center"
+                    android:text="INDO IN TECHNO"
+                    android:textColor="@color/white"
+                    android:textSize="50dp"
+                    android:textStyle="bold" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginHorizontal="0dp"
+                    android:layout_marginBottom="50dp"
+                    android:paddingHorizontal="15dp"
+                    >
+                    <TextView
+                        android:id="@+id/itemDate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/teko_light"
+                        android:textSize="25dp"
+                        android:textColor="#FFFFFF"
+                        android:textStyle="bold"
+                        android:text="22-FEB-23"
+                        android:layout_marginRight="15dp">
+
+                    </TextView>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/teko_light"
+                        android:textSize="25dp"
+                        android:textColor="#FFFFFF"
+                        android:textStyle="bold"
+                        android:layout_marginRight="7dp"
+                        android:text="|"></TextView>
+
+                    <TextView
+                        android:id="@+id/itemTime"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/teko_light"
+                        android:textSize="25dp"
+                        android:textColor="#FFFFFF"
+                        android:textStyle="bold"
+                        android:text="10:30 AM"></TextView>
+                    <TextView
+                        android:id="@+id/itemPrice"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/teko_light"
+                        android:textSize="25dp"
+                        android:textColor="#FFFFFF"
+                        android:textStyle="bold"
+                        android:text="$10.00"
+                        android:gravity="right"
+                        android:layout_gravity="right"
+                        />
+                </LinearLayout>
+            </RelativeLayout>
+            <LinearLayout
+                android:id="@+id/line1"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_toRightOf="@id/group1"
+                android:orientation="vertical"
+                >
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="15dp"
+                    android:src="@drawable/topcircle"
+                    android:layout_gravity=""
+                    ></ImageView>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="150dp"
+                    android:background="@drawable/verticaldotted"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    />
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="15dp"
+                    android:src="@drawable/bottomcircle"
+                    android:layout_gravity=""
+                    ></ImageView>
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/group2"
+                android:layout_toRightOf="@id/line1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="180dp"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:rotation="270"
+                    android:text="BUY"
+                    android:textColor="#FFFFFF"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:textSize="20dp"
+                    />
+            </LinearLayout>
+
+        </RelativeLayout>
+    </RelativeLayout>
+    
 </androidx.cardview.widget.CardView>
