--- a/app/src/main/res/layout/activity_aboutus.xml
+++ b/app/src/main/res/layout/activity_aboutus.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,8 +8,60 @@
     android:background="@drawable/tirai"
     tools:context=".aboutus">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:elevation="4dp"
+        android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
+
+        >
+        <ImageView
+            android:id="@+id/menuBtn"
+            android:layout_width="33dp"
+            android:layout_height="33dp"
+            android:src="@drawable/baseline_menu_24"
+            android:layout_marginLeft="35dp"
+            ></ImageView>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginLeft="35dp"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Welcome to Jalihara"
+                android:fontFamily="@font/poppins"
+                android:textColor="#44265E"
+                android:textSize="18dp"
+                />
+            <TextView
+                android:id="@+id/usernameLbl"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="User"
+                android:fontFamily="@font/poppins_bold"
+                android:textColor="#44265E"
+                android:textSize="20dp"
+
+                />
+
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginLeft="15dp"
+            android:src="@drawable/logooutline"
+            />
+    </androidx.appcompat.widget.Toolbar>
+
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
+        android:layout_below="@id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="10dp"
@@ -38,6 +90,124 @@
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager2"
+        android:layout_below="@id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-</LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/menu"
+        android:layout_below="@id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="invisible"
+        >
+        <LinearLayout
+            android:id="@+id/homeMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/menuborderbottom"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:paddingVertical="14dp"
+            >
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/nav_home"
+                ></ImageView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="HOME"
+                android:fontFamily="@font/poppins_semibold"
+                android:layout_gravity="center"
+                android:textSize="16dp"
+                android:layout_marginLeft="6dp"
+                android:textColor="#44265E"
+                android:gravity="center"
+                ></TextView>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/ticketMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/menuborderbottom"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:paddingVertical="14dp"
+            >
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/nav_ticket"
+                android:layout_gravity="center"
+                ></ImageView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TICKET"
+                android:fontFamily="@font/poppins_semibold"
+                android:layout_gravity="center"
+                android:textSize="16dp"
+                android:layout_marginLeft="6dp"
+                android:textColor="#44265E"
+                android:gravity="center"
+                ></TextView>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/aboutusMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/menuborderbottom"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:paddingVertical="14dp"
+            >
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/nav_aboutus"
+                android:layout_gravity="center"
+                ></ImageView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ABOUT US"
+                android:fontFamily="@font/poppins_semibold"
+                android:layout_gravity="center"
+                android:textSize="16dp"
+                android:layout_marginLeft="6dp"
+                android:textColor="#44265E"
+                android:gravity="center"
+                ></TextView>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/logoutMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#C09FDE"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:paddingVertical="14dp"
+            >
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/nav_logout"
+                android:layout_gravity="center"
+                ></ImageView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="LOG OUT"
+                android:fontFamily="@font/poppins_semibold"
+                android:layout_gravity="center"
+                android:textSize="16dp"
+                android:layout_marginLeft="6dp"
+                android:textColor="#44265E"
+                android:gravity="center"
+                ></TextView>
+        </LinearLayout>
+    </LinearLayout>
+</RelativeLayout>
