--- a/app/src/main/res/layout/activity_ticketform.xml
+++ b/app/src/main/res/layout/activity_ticketform.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,8 +13,60 @@
     android:orientation="vertical"
     tools:context=".ticketform">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:elevation="4dp"
+        android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
+
+        >
+        <ImageView
+            android:id="@+id/menuBtn"
+            android:layout_width="33dp"
+            android:layout_height="33dp"
+            android:src="@drawable/baseline_menu_24"
+            android:layout_marginLeft="35dp"
+            ></ImageView>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginLeft="35dp"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Welcome to Jalihara"
+                android:fontFamily="@font/poppins"
+                android:textColor="#44265E"
+                android:textSize="18dp"
+                />
+            <TextView
+                android:id="@+id/usernameLbl"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="User"
+                android:fontFamily="@font/poppins_bold"
+                android:textColor="#44265E"
+                android:textSize="20dp"
+
+                />
+
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginLeft="15dp"
+            android:src="@drawable/logooutline"
+            />
+    </androidx.appcompat.widget.Toolbar>
+
 
     <LinearLayout
+        android:layout_below="@id/toolbar"
         android:id="@+id/backBtn"
         android:layout_width="60dp"
         android:layout_height="60dp"
@@ -42,7 +94,6 @@
         android:layout_below="@id/backBtn"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="25dp"
-        android:layout_marginTop="10dp"
         >
 
         <TextView
@@ -317,106 +368,122 @@
 
     </RelativeLayout>
 
-<!--    <RelativeLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_weight="1"-->
-<!--        -->
-<!--        >-->
-<!--        <LinearLayout-->
-<!--            android:id="@+id/menu"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_alignParentBottom="true"-->
-<!--            android:layout_alignParentStart="true"-->
-<!--            android:layout_toEndOf="@+id/menutoggle"-->
-<!--            android:layout_marginBottom="25dp"-->
-<!--            android:orientation="horizontal"-->
-<!--            android:paddingVertical="20dp"-->
-<!--            android:paddingHorizontal="30dp"-->
-<!--            android:paddingStart="80dp"-->
-<!--            android:layout_marginHorizontal="20dp"-->
-<!--            android:background="@drawable/menuradius"-->
-<!--            android:visibility="visible"-->
-
-<!--            >-->
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:orientation="horizontal"-->
-<!--                android:layout_weight="1"-->
-<!--                android:gravity="center">-->
-<!--                <ImageView-->
-<!--                    android:layout_width="35dp"-->
-<!--                    android:layout_height="35dp"-->
-<!--                    android:src="@drawable/baseline_home_24"></ImageView>-->
-<!--            </LinearLayout>-->
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:orientation="horizontal"-->
-<!--                android:layout_weight="1"-->
-<!--                android:gravity="center">-->
-<!--                <ImageView-->
-<!--                    android:layout_width="35dp"-->
-<!--                    android:layout_height="35dp"-->
-<!--                    android:src="@drawable/baseline_home_24"></ImageView>-->
-<!--            </LinearLayout>-->
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:orientation="horizontal"-->
-<!--                android:layout_weight="1"-->
-<!--                android:gravity="center">-->
-<!--                <ImageView-->
-<!--                    android:layout_width="35dp"-->
-<!--                    android:layout_height="35dp"-->
-<!--                    android:src="@drawable/baseline_home_24"></ImageView>-->
-<!--            </LinearLayout>-->
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:orientation="horizontal"-->
-<!--                android:layout_weight="1"-->
-<!--                android:gravity="center">-->
-<!--                <ImageView-->
-<!--                    android:layout_width="35dp"-->
-<!--                    android:layout_height="35dp"-->
-<!--                    android:src="@drawable/baseline_home_24"></ImageView>-->
-<!--            </LinearLayout>-->
-
-<!--        </LinearLayout>-->
-
-<!--        <LinearLayout-->
-<!--            android:id="@+id/menutoggle"-->
-<!--            android:layout_width="75dp"-->
-<!--            android:layout_height="75dp"-->
-<!--            android:layout_weight="1"-->
-<!--            android:orientation="horizontal"-->
-<!--            android:layout_alignParentBottom="true"-->
-<!--            android:layout_alignParentStart="true"-->
-<!--            android:layout_marginBottom="25dp"-->
-<!--            android:layout_marginStart="20dp"-->
-<!--            android:paddingVertical="20dp"-->
-<!--            android:background="@drawable/menutoggleradius"-->
-<!--            >-->
-<!--            <LinearLayout-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:orientation="horizontal"-->
-<!--                android:layout_weight="1"-->
-<!--                android:gravity="center">-->
-<!--                <ImageView-->
-<!--                    android:layout_width="35dp"-->
-<!--                    android:layout_height="35dp"-->
-<!--                    android:src="@drawable/baseline_menu_24"/>-->
-<!--            </LinearLayout>-->
-<!--        </LinearLayout>-->
-<!--    </RelativeLayout>-->
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/menu"
+        android:layout_below="@id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="invisible"
+        >
+        <LinearLayout
+            android:id="@+id/homeMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/menuborderbottom"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:paddingVertical="14dp"
+            >
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/nav_home"
+                ></ImageView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="HOME"
+                android:fontFamily="@font/poppins_semibold"
+                android:layout_gravity="center"
+                android:textSize="16dp"
+                android:layout_marginLeft="6dp"
+                android:textColor="#44265E"
+                android:gravity="center"
+                ></TextView>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/ticketMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/menuborderbottom"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:paddingVertical="14dp"
+            >
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/nav_ticket"
+                android:layout_gravity="center"
+                ></ImageView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TICKET"
+                android:fontFamily="@font/poppins_semibold"
+                android:layout_gravity="center"
+                android:textSize="16dp"
+                android:layout_marginLeft="6dp"
+                android:textColor="#44265E"
+                android:gravity="center"
+                ></TextView>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/aboutusMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/menuborderbottom"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:paddingVertical="14dp"
+            >
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/nav_aboutus"
+                android:layout_gravity="center"
+                ></ImageView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ABOUT US"
+                android:fontFamily="@font/poppins_semibold"
+                android:layout_gravity="center"
+                android:textSize="16dp"
+                android:layout_marginLeft="6dp"
+                android:textColor="#44265E"
+                android:gravity="center"
+                ></TextView>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/logoutMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#C09FDE"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:paddingVertical="14dp"
+            >
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/nav_logout"
+                android:layout_gravity="center"
+                ></ImageView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="LOG OUT"
+                android:fontFamily="@font/poppins_semibold"
+                android:layout_gravity="center"
+                android:textSize="16dp"
+                android:layout_marginLeft="6dp"
+                android:textColor="#44265E"
+                android:gravity="center"
+                ></TextView>
+        </LinearLayout>
+    </LinearLayout>
+</RelativeLayout>
 
 </ScrollView>
